--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -2,15 +2,9 @@
 
 <ul>
   
-<% @tasks.each do |task| %>
-
-    <li>
-<%= link_to task.id, task %>
- : 
-<%= task.content %>
-</li>
-  
-<% end %>
+  <% @tasks.each do |task| %>
+    <li><%= link_to task.id, task %> : <%= task.content %></li>
+  <% end %>
 
 </ul>
 
