--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta charset="utf-8">
     <title>Tasklist</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
@@ -10,10 +11,12 @@
   </head>
 
   <body>
+    <div>
     <%= render 'layouts/navbar' %>
+    </div>
+    
     <div class="container">
       <%= render 'layouts/flash_messages' %>
-      
       <%= yield %>
     </div>
   </body>
