--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,3 +1,8 @@
 <ul>
-  <li><%= link_to 'Logout', logout_path, method: :delete %></li>
+  <% if logged_in? %>
+    <li><%= link_to 'Logout', logout_path, method: :delete %></li>
+  
+  <% else %>
+    <li><%= link_to 'Login', login_path %></li>
+  <% end %>
 </ul>
